syntax = "proto3";
package customer;

option go_package = "github.com/Nviswateja/CustomerTrackerService/service/protos/";

service CustomerService{
    rpc AddCustomerDetails(CustomerMessageRequest) returns(CustomerMessageReply){}
    rpc GetCustomers(GetCustomerMessageRequest) returns(CustomerDetailsReply) {}
}

// The request message containing the user's name.
message CustomerMessageRequest {
  string name = 1;
  string phoneNumber = 2;
}

// The request message containing the user's name.
message GetCustomerMessageRequest {
}

// The response message
message CustomerMessageReply {
  string message = 1;
}

message CustomerDetailsReply{
  repeated string customers =1;
}