syntax = "proto3";
package customerV2;

option go_package = "github.com/Nviswateja/CustomerTrackerService/service/protos/";
message Customer{
    string Name = 1;
    string phoneNumber = 2;
}

service CustomerService{
    rpc GetCustomerWithName(GetCustomerMessageRequest) returns(CustomerDetailsReply) {}
}

// The request message containing the user's name.
message GetCustomerMessageRequest {
}

message CustomerDetailsReply{
  repeated Customer customers =1;
}